[gd_scene load_steps=3 format=3 uid="uid://bxrnqua7n2wbi"]

[ext_resource type="Script" path="res://Scenes/pause_menu.gd" id="1_bvk7k"]

[sub_resource type="LabelSettings" id="LabelSettings_ul5uq"]
font_size = 9
shadow_size = 7
shadow_color = Color(0, 0, 0, 1)

[node name="PauseMenu" type="Control"]
z_index = 11
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
size_flags_horizontal = 4
script = ExtResource("1_bvk7k")

[node name="Label" type="Label" parent="."]
z_index = 9
texture_filter = 1
layout_mode = 2
offset_left = -479.0
offset_top = -220.0
offset_right = -392.0
offset_bottom = -159.0
scale = Vector2(1.35298, 0.853191)
text = "hdsaf sdaf sdaf sdaf sad fasdf asdf asdf asdf asd fas fd"
label_settings = SubResource("LabelSettings_ul5uq")
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -40.25
offset_top = -28.0
offset_right = 46.75
offset_bottom = 38.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[connection signal="visibility_changed" from="Label" to="." method="_on_label_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
